@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-23T00:42:18Z",
-  "count" : 3,
+  "timestamp" : "2025-03-08T12:10:46Z",
+  "count" : 1,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 2,
+  "count_decinc" : [ -2, +3 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
