@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-03-08T00:32:12Z",
+  "timestamp" : "2025-03-08T12:10:46Z",
   "count_outdated" : 8574,
   "uniques_outdated" : 3967,
-  "count" : 8631,
-  "uniques" : 4009,
+  "count" : 8632,
+  "uniques" : 4010,
   "clones" : [
     {
       "timestamp": "2025-02-22T00:00:00Z",
-      "count": 3,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
+      "count_decinc": [ 2, 3 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-02-23T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-03-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
