@@ -1,11 +1,11 @@
 {
-  "count": 57,
+  "count": 56,
   "uniques": 25,
   "clones": [
     {
       "timestamp": "2025-02-22T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-02-23T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2025-03-07T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-03-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
